@@ -1,21 +1,11 @@
-FROM eclipse-temurin:21-alpine as jdk
+FROM scratch
 
-COPY ./build/libs/node.jar /node.jar
+COPY ./build/native/nativeCompile/node /app/node
 
-RUN jar -xvf node.jar && jlink --add-modules $(jdeps --recursive --multi-release 21 --ignore-missing-deps --print-module-deps -cp 'BOOT-INF/lib/*' node.jar) --output /java
+WORKDIR /app
 
-FROM alpine
+EXPOSE 8080
+EXPOSE 8081
+EXPOSE 8082
 
-LABEL org.opencontainers.image.source https://github.com/attocash/node
-
-ENV JAVA_HOME=/java
-ENV PATH "${JAVA_HOME}/bin:${PATH}"
-
-RUN adduser -D atto
-USER atto
-
-COPY ./build/libs/node.jar /home/atto/node.jar
-
-COPY --from=jdk /java /java
-
-ENTRYPOINT ["java","-XX:+UseZGC","-jar","/home/atto/node.jar"]
+ENTRYPOINT ["./node"]
